[tool.poetry]
name = "fastapi-auth-nanoid"
version = "0.6.0"
description = "A FastAPI extension that provides Authentication support using NanoID (secure, easy to use and lightweight)"
authors = [    
    "Kilian Pichard <contact@kilianpichard.com>", 
]
maintainers = [
    "Kilian Pichard <contact@kilianpichard.com>", 
]
license = "MIT"
readme = "README.md"
homepage = "https://Kilian-Pichard.github.io/fastapi-auth-nanoid"
repository = "https://github.com/Kilian-Pichard/fastapi-auth-nanoid"
documentation = "https://Kilian-Pichard.github.io/fastapi-auth-nanoid"
keywords = ["fastapi", "auth", "nanoid", "authentication", "security", "jwt"]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",  
  "Programming Language :: Python :: 3.12", 
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.110.0"
PyJWT = "^2.8.0"
httpx = ">=0.27.0"
pydantic = "2.6.3"
pydantic-settings = "^2.2.1"
cryptography = ">=41.0.3,<=42.0.5"

[tool.poetry.extras]
asymmetric = ["cryptography"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
uvicorn = "^0.27.1"
pytest-asyncio = "^0.21.1"
coverage = "6.5.0"
coveralls = "==3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
requests = "^2.27.1"
pytest-cov = "^4.0.0"

[tool.poetry.urls]
Documentation = "https://Kilian-Pichard.github.io/fastapi-auth-nanoid"
Source = "https://Kilian-Pichard.github.io/fastapi-auth-nanoid"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"